--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -3,12 +3,29 @@ body {
   height: 100%;
 }
 
+.nav {
+  display:flex;
+  flex-direction: row;
+  list-style: none;
+}
+
+.circletree_img {
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+
+.card-container, p, .i-box  {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 body {
   display: -ms-flexbox;
   display: flex;
   flex-direction: column;
-  /* -ms-flex-align: center; */
-  /* align-items: center; */
+  -ms-flex-align: center;
+  align-items: center;
   /* padding-top: 40px; */
   /* padding-bottom: 40px; */
   background-color: #f5f5f5;
@@ -22,9 +39,11 @@ body {
   margin-top: 75px;
   background-color: #fff;
 }
+
 .form-signin .checkbox {
   font-weight: 400;
 }
+
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
@@ -32,14 +51,17 @@ body {
   padding: 10px;
   font-size: 16px;
 }
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
+
 .top {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+
 .middle {
   margin-bottom: -1px;
   border-radius: 0;
@@ -80,19 +102,6 @@ body {
   height: 490px;
 }
 
-.nav ul lil ctm {
-  display:flex-start;
-  list-style: none;
-}
-
-.circletree_img {
-  margin-left: 700px;
-  margin-top: 15px;
-  margin-bottom: 0px;
-
-}
-.card-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+footer {
+  margin-top: 150px;
 }
