--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -14,7 +14,7 @@ body {
   margin-bottom: 0px;
 }
 
-.card-container, p, .i-box  {
+.card-container, p, .i-box {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +26,9 @@ body {
   flex-direction: column;
   -ms-flex-align: center;
   align-items: center;
+  font-family: macho,sans-serif;
+  font-weight: 400;
+  font-style: normal;
   /* padding-top: 40px; */
   /* padding-bottom: 40px; */
   background-color: #f5f5f5;
@@ -74,9 +77,11 @@ body {
 }
 
 .card-img-bottom {
-  max-width: 600px;
-  max-height: 400px;
-  padding-bottom:75px ;
+  /* max-width: 600px;
+  max-height: 400px; */
+  padding-bottom:75px;
+  max-width:100%;
+  height: auto;
 }
 
 .i-box {
@@ -93,15 +98,37 @@ body {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  /* border: 1px solidrgba(0,0,0,.125); */
+  border: 1px solidrgba(0,0,0,.125);
   border-radius: 0.25rem;
   margin-bottom: 1.10rem;
   padding-left: 3.5rem;
   padding-right: 3.5rem;
   width: 754px;
-  height: 490px;
+  min-height: auto;
+}
+
+.card-title {
+  font-weight: bold;
 }
 
 footer {
   margin-top: 150px;
+}
+@media screen and (max-width: 500px) {
+  .card-img-bottom,
+  .card,
+  .card-title {
+    font-size: 1rem;
+    padding: 5px;
+    width: 370px;
+    font-weight: bold;
+    /* height: 175px; */
+  }
+}
+
+@media screen and (max-width: 500px){
+  .card-text {
+    font-size: 0.8rem;
+    font-weight: normal;
+  }
 }
